k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-app
  namespace: oficina
spec:
  type: NodePort
  selector:
    app: oficina-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
